// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toRedirectFiles creates appropriate metadata absolute url: fileContent 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://gityjf.io/">
    <link rel="canonical" href="https://gityjf.io/" />
  </head>
  <script>
    window.location.href = 'https://gityjf.io/' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://gityjf.io/docs/intro?a=1">
    <link rel="canonical" href="https://gityjf.io/docs/intro?a=1" />
  </head>
  <script>
    window.location.href = 'https://gityjf.io/docs/intro?a=1';
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://gityjf.io/docs/intro#anchor">
    <link rel="canonical" href="https://gityjf.io/docs/intro#anchor" />
  </head>
  <script>
    window.location.href = 'https://gityjf.io/docs/intro#anchor';
  </script>
</html>",
]
`;

exports[`toRedirectFiles creates appropriate metadata for empty baseUrl: fileContent baseUrl=empty 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=/abc">
    <link rel="canonical" href="/abc" />
  </head>
  <script>
    window.location.href = '/abc' + window.location.search + window.location.hash;
  </script>
</html>",
]
`;

exports[`toRedirectFiles creates appropriate metadata for root baseUrl: fileContent baseUrl=/ 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=/abc">
    <link rel="canonical" href="/abc" />
  </head>
  <script>
    window.location.href = '/abc' + window.location.search + window.location.hash;
  </script>
</html>",
]
`;

exports[`toRedirectFiles creates appropriate metadata trailingSlash=false: fileContent 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://gityjf.io/abc">
    <link rel="canonical" href="https://gityjf.io/abc" />
  </head>
  <script>
    window.location.href = 'https://gityjf.io/abc' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://gityjf.io/def.html">
    <link rel="canonical" href="https://gityjf.io/def.html" />
  </head>
  <script>
    window.location.href = 'https://gityjf.io/def.html' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://gityjf.io/">
    <link rel="canonical" href="https://gityjf.io/" />
  </head>
  <script>
    window.location.href = 'https://gityjf.io/' + window.location.search + window.location.hash;
  </script>
</html>",
]
`;

exports[`toRedirectFiles creates appropriate metadata trailingSlash=true: fileContent 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://gityjf.io/abc">
    <link rel="canonical" href="https://gityjf.io/abc" />
  </head>
  <script>
    window.location.href = 'https://gityjf.io/abc' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://gityjf.io/def.html">
    <link rel="canonical" href="https://gityjf.io/def.html" />
  </head>
  <script>
    window.location.href = 'https://gityjf.io/def.html' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://gityjf.io/">
    <link rel="canonical" href="https://gityjf.io/" />
  </head>
  <script>
    window.location.href = 'https://gityjf.io/' + window.location.search + window.location.hash;
  </script>
</html>",
]
`;

exports[`toRedirectFiles creates appropriate metadata trailingSlash=undefined: fileContent 1`] = `
[
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://gityjf.io/abc">
    <link rel="canonical" href="https://gityjf.io/abc" />
  </head>
  <script>
    window.location.href = 'https://gityjf.io/abc' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://gityjf.io/def.html">
    <link rel="canonical" href="https://gityjf.io/def.html" />
  </head>
  <script>
    window.location.href = 'https://gityjf.io/def.html' + window.location.search + window.location.hash;
  </script>
</html>",
  "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta http-equiv="refresh" content="0; url=https://gityjf.io/">
    <link rel="canonical" href="https://gityjf.io/" />
  </head>
  <script>
    window.location.href = 'https://gityjf.io/' + window.location.search + window.location.hash;
  </script>
</html>",
]
`;
